<resources>
    <string name="app_name">EXPO 2019</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="same_month" formatted="false">%d-%d %d:%d</string>
    <string name="yesterday" formatted="false">%d:%d yesterday</string>
    <string name="today" formatted="false">%d:%d today</string>
    <string name="within_one_hours">%d minutes age</string>
    <string name="a_moment_age">a moment age</string>
    <string name="no_network_connection">No network connection</string>
    <string name="delete">delete</string>
    <string name="guide_join_now">Start to use</string>
    <string name="guide1">趣味导游小伙伴光团</string>
    <string name="guide2">非凡的AR体验</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_identifying_code">请输入验证码</string>
    <string name="there_is_no_user_protocol">暂无用户协议</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="submit">submit</string>
    <string name="language">English</string>
    <string name="language_select">请选择语言</string>
    <string name="bj_world_horticultural_exposition">International Horticultural Exhibition 2019 Beijing</string>
    <string name="within_minutes">%d minutes</string>
    <string name="time_leng">flag:</string>
    <string name="ukey_error">用户数据错误，请重新登录</string>
    <string name="unlogin">请先登录</string>
    <string name="data_unexistsd">数据已删除</string>
    <string name="req_json_error">参数错误</string>
    <string name="input_correct_phone">请输入正确的手机号码</string>
    <string name="relogin">请重新登录</string>
    <string name="no_req_code">请先请求验证码</string>
    <string name="no_reg">该账号未注册</string>
    <string name="id_not_exist">数据已删除</string>
    <string name="invalid_code">验证码已失效</string>
    <string name="server_error">服务端错误</string>
    <string name="code_error">验证码错误</string>
    <string name="code_times_limit">今日请求次数已达上限</string>
    <string name="account_unable">此账号已被锁定，无法登录</string>
    <string name="bind_phone_need_sms">绑定手机号码需要通过短信验证</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="situation_describe">情况描述\t最多输入300字</string>
    <string name="save">保存</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="save_user_info_success">您的信息已经保存成功</string>
    <string name="wrong_email">您的邮箱格式不正确，请重新输入</string>
    <string name="latest_app_version">当前已经是最新版本</string>
    <string name="see_detail">查看详情</string>
    <string name="route_introduce">路线介绍</string>
    <string name="spot_introduce">景点介绍</string>
    <string name="hot">热度</string>
    <string name="camera_touch">轻触拍照，按住摄像</string>
    <string name="app_top_item">世园\n活动</string>
    <string name="submit_success">你已经提交成功</string>
    <string name="new_message">新消息提示</string>
    <string name="main_home">Home</string>
    <string name="main_find">Find</string>
    <string name="main_encyclopedias">Ency</string>
    <string name="main_scenic">Scen</string>
    <string name="main_mine">Mine</string>
    <string name="main_college">Coll</string>
    <string name="tourist_service_phone">游客服务热线：400-818-6666</string>
    <string name="item_tourist_service_text_0">问询咨询</string>
    <string name="item_tourist_service_text_1">物品寄存</string>
    <string name="item_tourist_service_text_2">物品租赁</string>
    <string name="item_tourist_service_text_3">失物招领</string>
    <string name="item_tourist_service_text_4">母婴服务</string>
    <string name="item_tourist_service_text_5">医疗救助</string>
    <string name="item_tourist_service_text_6">人员走失</string>
    <string name="item_tourist_service_text_7">治安举报</string>
    <string name="item_tourist_service_intro_text_0">想要了解世园情况</string>
    <string name="item_tourist_service_intro_text_1">为您提供物品存放服务</string>
    <string name="item_tourist_service_intro_text_2">出租婴儿车、轮椅</string>
    <string name="item_tourist_service_intro_text_3">请您保管好财务</string>
    <string name="item_tourist_service_intro_text_4">母婴休息专区</string>
    <string name="item_tourist_service_intro_text_5">健康的身体才能开心的游玩</string>
    <string name="item_tourist_service_intro_text_6">请您看好老人和孩子</string>
    <string name="item_tourist_service_intro_text_7">遇事礼让，文明游园</string>
    <string name="mine_edit_info">查看并编辑个人资料</string>
    <string name="item_mine_bespeak">我的预约</string>
    <string name="item_mine_comment_report">评价与反馈</string>
    <string name="item_mine_message">My News</string>
    <string name="item_mine_about">关于</string>
    <string name="item_mine_setting">设置</string>
    <string name="item_mine_contacts">预约联系人</string>
    <string name="feed_back_tips">衷心的感谢您对我们的信任和支持。为了不断提高我们的服务质量,完善 我们的工作,为了给您提供更加优质的服务，欢迎您提出合理的评价与意见！</string>
    <string name="comment_content">评价内容</string>
    <string name="short_content">请输入十个字符以上</string>
    <string name="item_user_img">修改头像</string>
    <string name="item_user_name">昵称</string>
    <string name="item_user_sex">性别</string>
    <string name="item_user_age">年龄</string>
    <string name="item_user_email">邮箱</string>
    <string name="item_user_work">工作行业</string>
    <string name="item_setting_language">Language Setting</string>
    <string name="item_setting_cache">清除缓存</string>
    <string name="item_setting_update">检查更新</string>
    <string name="item_setting_guide">用户指南</string>
    <string name="item_setting_policy">法律条款与政策</string>
    <string name="item_contacts_identify_type">证件类型</string>
    <string name="item_contacts_name">姓\t\t\t名</string>
    <string name="item_contacts_identify_id">证件号码</string>
    <string name="item_contacts_name_hint">请输入真实姓名</string>
    <string name="item_contacts_identify_id_hint">请正确填写证件号码</string>
    <string name="location_describe">位置描述</string>
    <string name="cancel_the_login">已取消</string>
    <string name="authorization_failure">授权失败</string>
    <string name="authorization_success">授权成功</string>
    <string name="title_bind_ac">绑定手机号</string>
    <string name="title_pick_ac">region</string>
    <string name="title_message_kind_ac">消息中心</string>
    <string name="title_location_describe_ac">所在位置</string>
    <string name="title_user_info_ac">用户资料</string>
    <string name="title_setting_ac">Setting</string>
    <string name="title_feed_back_ac">评价与反馈</string>
    <string name="title_message_system_ac">系统消息</string>
    <string name="title_message_tourist_ac">游客服务</string>
    <string name="title_message_appointment_ac">预约提醒</string>
    <string name="title_message_activity_ac">活动消息</string>
    <string name="title_routest_ac">游览路线</string>
    <string name="title_home">请输入景点名称</string>
    <string name="title_contact_appointment">预约联系人</string>
    <string name="title_contact_add">添加联系人</string>
    <string name="title_contact_edit">编辑联系人</string>
    <string name="title_expo_scene">实景世园</string>
    <string name="title_expo_activity">世园活动</string>
    <string name="check_string_empty_content">内容不能为空</string>
    <string name="check_string_empty_name">姓名不能为空</string>
    <string name="check_string_empty_localtion_descriptiong">情况描述不能为空</string>
    <string name="check_string_empty_title">标题不能为空</string>
    <string name="check_string_empty_image_video">图片或视频不能为空</string>
    <string name="check_string_no_gps_empty_localtion">由于GPS信号无法准确定位，请填写位置描述</string>
    <string name="check_string_id_card">身份证格式错误</string>
    <string name="check_string_id_type">证件类型不能为空</string>
    <string name="check_string_passport">护照格式错误</string>
    <string name="check_string_tw_card">台湾通行证格式不正确</string>
    <string name="toast_feed_back_success">感谢你的反馈</string>
    <string name="home_func_item_navigation">导航导览</string>
    <string name="home_func_item_wifi">免费WIFI</string>
    <string name="home_func_item_tickets">购票</string>
    <string name="home_func_item_appointment">场馆预约</string>
    <string name="home_func_item_tourist_service">游客服务</string>
    <string name="home_func_item_line">游览路线</string>
    <string name="home_func_item_microcosmic">微观世界</string>
    <string name="home_func_item_online">网上世园</string>
    <string name="home_func_item_scenic">景点</string>
    <string name="home_func_item_theme_activity">主题活动</string>
    <string name="home_func_item_theme_periphery">周边</string>
    <string name="home_func_item_theme_ar">AR游园</string>
    <string name="home_func_item_theme_smart_map">智玩地图</string>
    <string name="home_func_title_venue">推荐场馆</string>
    <string name="home_func_title_exhibit">推荐展览</string>
    <string name="home_func_title_exhibit_garden">推荐展园</string>
    <string name="home_tab_find">发现</string>
    <string name="home_tab_activities">活动</string>
    <string name="home_tab_food">美食</string>
    <string name="home_tab_accommodation">酒店</string>
    <string name="home_tab_periphery">周边</string>
    <string name="home_tab_play">游玩</string>
    <string name="home_tab_service">服务</string>
    <string name="home_tab_eat_live">吃&#038;住</string>
    <string name="gps_open_title">该功能需要打开定位功能。</string>
    <string name="gps_open_content">请点击“设置”-“定位服务”打开定位功能</string>
    <string name="navigationg_arrive">到达目的地</string>
    <string name="navigationg_back">返回导航</string>
    <string name="message_kind_system_title">系统消息</string>
    <string name="message_kind_system_content">接收到的系统消息</string>
    <string name="message_kind_appointment_title">预约提醒</string>
    <string name="message_kind_appointment_content">预约通知消息</string>
    <string name="message_kind_tourist_content">游客提交服务后的反馈信息</string>
    <string name="empty_content_2">暂时没有数据</string>
    <string name="empty_fresh_2">立即更新</string>
    <string name="empty_expo_activity">没有查询到活动</string>
    <string name="please_enter_keywords">please enter keywords</string>
    <string name="not_input">未填写</string>
    <string name="no_more_data_available">no more data available</string>
    <string name="about_content_info">\t\tThe 2019 world horticultural exposition in Beijing, Ch
        ina is organized by the international horticultural producers associationApproved by the int
        ernational exhibition bureau, the highest level world horticultural exposition sponsored by
        the Chinese government and undertaken by Beijing is entitled "green living""Living and beautiful homeland" will be an embodiment of \n
                                          \t\tThe 2019 world horticultural exposition in Beijing, Ch
        ina is organized by the international horticultural producers associationApproved by the int
        ernational exhibition bureau, the highest level world horticultural exposition sponsored by
        the Chinese government and undertaken by Beijing is entitled "green living""Living and beautiful homeland" will be an embodiment of </string>
    <string name="logging_in_is_an_agreement">登录即表示同意</string>
    <string name="register_in_is_an_agreement">注册即表示同意</string>
    <string name="other_login_methods">other login methods</string>
    <string name="get_code">Get Code</string>
    <string name="recommend">RECOMM</string>
    <string name="articles_of_agreement">《北京世园会用户服务协议》</string>
    <string name="dialog_image_record">拍摄</string>
    <string name="dialog_image_image_video">照片或者视频</string>
    <string name="dialog_image_album">从相册中选择</string>
    <string name="baidu_navi">百度导航</string>
    <string name="autonavi_navi">高德导航</string>
    <string name="complete">完成</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="device_sensors">仅GPRS</string>
    <string name="battery_saving">低功耗</string>
    <string name="everyone_playing">大家都在玩</string>
    <string name="find_toilet">找厕所</string>
    <string name="find_station">找导览车站</string>
    <string name="find_gate">找大门</string>
    <string name="find_service_centre">找服务中心</string>
    <string name="find_doctor_location">找医疗点</string>
    <string name="find_mother_baby_room">找母婴室</string>
    <string name="find_free_wifi">免费wifi</string>
</resources>