<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dms_166"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/TextSizeBlack16"
        android:text="@string/everyone_playing" />

    <TextView
        android:layout_width="@dimen/dms_108"
        android:layout_height="@dimen/dms_4"
        android:layout_margin="@dimen/dms_20"
        android:background="@color/orange_fdb931" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home_tab2_play"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_play" />

        <TextView
            android:id="@+id/home_tab2_service"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_service" />

        <TextView
            android:id="@+id/home_tab2_food"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_food" />

        <TextView
            android:id="@+id/home_tab2_accommodation"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_accommodation" />

        <TextView
            android:id="@+id/home_tab2_periphery"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_periphery" />


    </LinearLayout>
</LinearLayout>