<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dms_122"
    android:layout_marginBottom="@dimen/dms_22"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/home_find_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dms_122"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_0"
            style="@style/style_home_find_item"
            android:background="#D3F6F6"
            android:drawableLeft="@mipmap/home_find_toilet"
            android:text="@string/find_toilet" />

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_1"
            style="@style/style_home_find_item"
            android:background="#E2F3FB"
            android:drawableLeft="@mipmap/home_find_station"
            android:text="@string/find_station" />

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_2"
            style="@style/style_home_find_item"
            android:background="#FFDDCF"
            android:drawableLeft="@mipmap/home_find_gate"
            android:text="@string/find_gate" />

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_3"
            style="@style/style_home_find_item"
            android:background="#EDF8D8"
            android:drawableLeft="@mipmap/home_find_service_centre"
            android:text="@string/find_service_centre" />

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_4"
            style="@style/style_home_find_item"
            android:background="#FFE0E0"
            android:drawableLeft="@mipmap/home_find_doctor"
            android:text="@string/find_doctor_location" />

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_5"
            style="@style/style_home_find_item"
            android:background="#E1FFE1"
            android:drawableLeft="@mipmap/home_find_mother_baby"
            android:text="@string/find_mother_baby_room" />

        <com.hedan.textdrawablelibrary.TextViewDrawable
            android:id="@+id/home_find_6"
            style="@style/style_home_find_item"
            android:layout_marginRight="@dimen/dms_20"
            android:background="#FEF8E8"
            android:drawableLeft="@mipmap/home_find_wifi"
            android:text="@string/find_free_wifi" />

    </LinearLayout>
</HorizontalScrollView>