<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_f3f3f3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dms_20"
        android:paddingBottom="@dimen/dms_18">

        <TextView
            android:id="@+id/home_tab1_1"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_play" />

        <TextView
            android:id="@+id/home_tab1_2"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_service" />

        <TextView
            android:id="@+id/home_tab1_3"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_eat_live" />

        <TextView
            android:id="@+id/home_tab1_4"
            style="@style/style_home_play_item"
            android:text="@string/home_tab_periphery" />

        <!--<TextView-->
        <!--android:id="@+id/home_tab1_5"-->
        <!--style="@style/style_home_play_item"-->
        <!--android:text="@string/home_tab_periphery" />-->
    </LinearLayout>
</LinearLayout>