<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/location_mode_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@null"
        android:button="@null"
        android:paddingTop="@dimen/dms_36"
        android:paddingBottom="@dimen/dms_36"
        android:textSize="@dimen/font_30"
        android:textColor="@color/selector_66_02cd9b"
        android:text="@string/hight_accuracy"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_EEE"/>
    <RadioButton
        android:id="@+id/location_mode_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@null"
        android:button="@null"
        android:paddingTop="@dimen/dms_36"
        android:paddingBottom="@dimen/dms_36"
        android:textSize="@dimen/font_30"
        android:textColor="@color/selector_66_02cd9b"
        android:text="@string/device_sensors"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_EEE"/>
    <RadioButton
        android:id="@+id/location_mode_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@null"
        android:button="@null"
        android:paddingTop="@dimen/dms_36"
        android:paddingBottom="@dimen/dms_36"
        android:textSize="@dimen/font_30"
        android:textColor="@color/selector_66_02cd9b"
        android:text="@string/battery_saving"/>
</RadioGroup>